@@ -15,6 +15,7 @@ Version 0.1.3 (unreleased)
 * Added ability to store arbitrary text with a puzzle.
 * Fixed bug with rendering of lines near border.
 * Added 90 degree rotational symmetry and symmetry along diagonals.
+* Added partial support for overriding cell styles.
 
 Version 0.1.2 (April 2, 2010)
 =============================
